Fix inconsistent spacing in sparkline and sparkbar line dashes

--- a/src/components/Sparkbar/Sparkbar.scss
+++ b/src/components/Sparkbar/Sparkbar.scss
@@ -14,3 +14,8 @@
 .VisuallyHidden {
   @include visually-hidden;
 }
+
+.ComparisonLine {
+  fill: none;
+  stroke-dasharray: 3 2;
+}
